--- a/client/src/layout.scss
+++ b/client/src/layout.scss
@@ -7,6 +7,8 @@
   margin-right: auto;
   padding-left: 20px;
   padding-right: 20px;
+  display: flex;
+  flex-direction: column;
 
   @include lg {
     background-color: rgb(247, 210, 196);
@@ -21,5 +23,10 @@
   @include sm {
     background-color: rgb(239, 200, 200);
     max-width: 640px;
+  }
+
+  .content {
+    background-color: purple;
+    flex: 1;
   }
 }
