--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -13,4 +13,10 @@ body {
   font-family: "Lato", sans-serif;
   overflow: hidden;
 }
-                    
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 40px #fece51 inset !important;
+}
