--- a/client/src/routes/layout/layout.scss
+++ b/client/src/routes/layout/layout.scss
@@ -1,4 +1,4 @@
-@import "./resposive.scss";
+@import "./../../resposive.scss";
 
 .layout {
   height: 100vh;
@@ -11,22 +11,21 @@
   flex-direction: column;
 
   @include lg {
-    background-color: rgb(247, 210, 196);
+    // background-color: rgb(247, 210, 196);
     max-width: 1280px;
   }
 
   @include md {
-    background-color: rgb(186, 203, 234);
+    // background-color: rgb(186, 203, 234);
     max-width: 768px;
   }
 
   @include sm {
-    background-color: rgb(239, 200, 200);
+    // background-color: rgb(239, 200, 200);
     max-width: 640px;
   }
 
   .content {
-    background-color: purple;
-    flex: 1;
+    height: calc(100vh - 100px);
   }
 }
