--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -13,7 +13,9 @@ body {
   font-family: "Lato", sans-serif;
   overflow: hidden;
 }
-
+#master {
+  overflow-x: hidden;
+}
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
