search bar complete

--- a/client/src/components/searchBar/searchBar.scss
+++ b/client/src/components/searchBar/searchBar.scss
@@ -86,22 +86,28 @@
       }
     }
 
-    button {
-      border: none;
-      cursor: pointer;
-
+    a {
       background-color: #fece51;
       flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
-      @include sm {
-        padding: 10px;
-        border-radius: 7px;
-        margin-top: 3rem;
-      }
+      button {
+        border: none;
+        cursor: pointer;
+        background-color: #fece51;
 
-      img {
-        width: 24px;
-        height: 24px;
+        @include sm {
+          padding: 10px;
+          border-radius: 7px;
+          margin-top: 3rem;
+        }
+
+        img {
+          width: 24px;
+          height: 24px;
+        }
       }
     }
   }
